# secconfig

./: .gitignore  LICENSE  README.md  pyproject.toml
secconfig/: config.py  main.py
tests/: test_secconfig.py
